1.3069_01   07.07.2011

    [ BUG FIXES ]
    * Fix a bug while parsing some cookies
      (Franck Cuny)
    * Documentation and tests on how to use many Dancer application
      inside one PSGI file (PR 564)
      (Alex Kalderimis and Franck Cuny)
    * More flexible test for locale-aware logging (Alberto Simões)
    * Do not re-read config files when dance starts if they were
      already loaded.  (Alberto Simões)
    * Fixed shell-dependent tests for Window testing. (Alberto Simões)
    * Die properly if halt is call inside an hook.
      (Damien Krotkine and Alberto Simões)
    * Make template work outside of requests (Issue 592) (David Precious)
    * Cleanup session tests folder (Issue 594) (Sawyer X)

    [ ENHANCEMENTS ]
    * Error Hook (PR 563 - JT Smith)
    * Exceptions system (Damien Krotkine)
    * The no prefix can be set using 'prefix "/";' (Alberto Simões)
    * Support for nested prefixes (Alberto Simões)
    * Cleanup on Dancer::FileUtils (Sawyer X)
    * Cleanup on File::Temp dependencies (Sawyer X)

    [ DOCUMENTATION ]
    * Documentation on tokens automatically added to templates.
      (Alberto Simões)
    * Documentation on serializer magical access to put/posted data.
      (Alberto Simões)

1.3060      15.06.2011
    ** Codename: Pirouetting Pedro // Pedro Melo **

    [ ENHANCEMENTS ]
    * No functional changes, just releasing as stable.

1.3059_04   12.06.2011

    [ BUG FIXES ]
    * Fix a bunch of cpan testers reports 
    (Alberto Simões)

1.3059_03   11.06.2011

    [ BUG FIXES ]
    * Fix for issue #539
      https://github.com/sukria/Dancer/issues/539
      Don't decode twice entries in the params hash table, file 
      uploads with UTF-8 characters in their name are now possible.
      (Toby Corkindale, Alexis Sukrieh)
    * Fix broken test with old version of HTTP::Parser::XS
      (Franck Cuny)
    * #492 - Don't run Test::TCP tests on win32
      (Franck Cuny)